--- a/src/themes/oscar/assets/css/modules/pagination.css
+++ b/src/themes/oscar/assets/css/modules/pagination.css
@@ -5,7 +5,7 @@
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-    gap: var(--spacing-3);
+    gap: 0 var(--spacing-3);
     a {
         font: var(--font-heading);
     }
